--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/wallet
-spring.datasource.username=long123
-spring.datasource.password=1122334455
+spring.datasource.username=root
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.schema=wallet
 
@@ -10,4 +10,4 @@ spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.sql.init.platform=all
 
-#server.port=9999
+server.port=9999
